@@ -119,7 +119,7 @@ resource_get(struct http_cache *cache,
         return;
 
     case RESOURCE_ADDRESS_FASTCGI:
-        fcgi_request(pool, fcgi_stock,
+        fcgi_request(pool, fcgi_stock, address->u.cgi.jail,
                      address->u.cgi.action,
                      address->u.cgi.path,
                      method, resource_address_cgi_uri(pool, address),
