@@ -3,6 +3,7 @@ cm4all-beng-proxy (0.7.16) unstable; urgency=low
   * processor: separate trusted from untrusted widgets by host name
   * processor: mode=partition is deprecated
   * translate: fix DOCUMENT_ROOT handler for CGI/FASTCGI
+  * fcgi-request: added JailCGI support
 
  --
 
